--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-hero.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-hero.scss
@@ -1,6 +1,7 @@
 .hero-home-block {
 	position: relative;
 	height: 100vh;
+	min-height: em(600);
 	background-color: $marine-dk;
 	&::before {
 		content:"";
