--- a/wp-content/themes/laureus-theme/front-dev/scss/_general.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_general.scss
@@ -1,10 +1,3 @@
-//media queries
-@mixin tablet {
-  @media (min-width: #{$tablet-width}) and (max-width: #{$sm-desktop-width}) {
-    @content;
-  }
-}
-
 $browser-context: 16; // Default
 
 @function em($pixels, $context: $browser-context) {
@@ -56,6 +49,13 @@ $browser-context: 16; // Default
 
 @mixin smdesktop {
   @media (min-width: 1025px) and (max-width: 1380px) {
+    @content;
+  }
+}
+
+//media queries
+@mixin tablet {
+  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width}) {
     @content;
   }
 }
@@ -209,7 +209,7 @@ body {
       display: block;
       width: 71px;
       height: 52px;
-      z-index: -1;
+      z-index: 0;
     }
     &::after {
       background-image: url('../img/icons/quote-left-grey.png');
@@ -224,6 +224,8 @@ body {
     p {
       font-size: em(20);
       color: $dgrey;
+      position: relative;
+      z-index: 1;
     }
   }
 
