--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-portfolio.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-portfolio.scss
@@ -61,6 +61,9 @@
 					@include desktop {
 						float: right;
 					}
+					@include tablet {
+						max-width: 100%;
+					}
 					li {
 						overflow: hidden;
 						display: block;
