--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-story.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-story.scss
@@ -5,9 +5,16 @@
 		height: em(900);
 		display: flex;
 	}
+	@include tablet {
+		display: flex;
+	}
 	.side-story {
 		position: relative;
 		@include desktop {
+			width: 50%;
+			height: em(900);
+		}
+		@include tablet {
 			width: 50%;
 			height: em(900);
 		}
@@ -18,6 +25,10 @@
 			height: em(350);
 			transition: all 0.3s;
 			@include desktop {
+				height: em(900);
+			}
+			@include tablet {
+				width: 50%;
 				height: em(900);
 			}
 			&:hover {
