--- a/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
@@ -56,3 +56,6 @@
 @import "blocks/work/_block-content";
 @import "blocks/work/_block-cities";
 @import "blocks/work/_block-league";
+
+//Blocks News
+@import "blocks/news/_block-feed-grid";
