Ultimos ajustes pre deploy

--- a/wp-content/themes/laureus-theme/front-dev/scss/_footer.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_footer.scss
@@ -55,6 +55,9 @@ footer {
 						background: transparent;
 						color: $white;
 						font-family: $bold;
+						&:hover {
+							color: $marine;
+						}
 					}
 					ul {
 						list-style: none;
