--- a/wp-content/themes/laureus-theme/css/styles.css
+++ b/wp-content/themes/laureus-theme/css/styles.css
@@ -2775,6 +2775,8 @@ footer {
           @media (min-width: 1200px) {
             footer .footer-section.sitemap ul#menu-footer-menu > li a {
               padding: 0; } }
+          footer .footer-section.sitemap ul#menu-footer-menu > li a:hover {
+            color: #00CDCD; }
         footer .footer-section.sitemap ul#menu-footer-menu > li ul {
           list-style: none;
           padding: 0; }
@@ -3931,7 +3933,19 @@ footer {
   position: relative;
   height: 100vh;
   min-height: 37.5em;
-  background-color: #7dc5c7; }
+  background-color: #001440;
+  background-image: url("../img/bg/hero-image.jpg");
+  background-size: cover;
+  /*
+	&::after {
+		content: "";
+		position: absolute; 
+		width: 100%;
+		height: 100%;
+		background-image: url('../img/misc/pattern-hero.png');
+		background-repeat: no-repeat;
+		background-position: center;
+	}*/ }
   .hero-home-block::before {
     content: "";
     display: block;
@@ -3941,14 +3955,6 @@ footer {
     width: 1px;
     height: 80px;
     background-color: #ffffff; }
-  .hero-home-block::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-image: url("../img/misc/pattern-hero.png");
-    background-repeat: no-repeat;
-    background-position: center; }
   .hero-home-block .hero-caption {
     position: absolute;
     max-width: 36.625em;
