--- a/wp-content/themes/laureus-theme/css/styles.css
+++ b/wp-content/themes/laureus-theme/css/styles.css
@@ -3374,7 +3374,12 @@ footer {
 
 .testimonials-carousel {
   padding: 1.75em 0;
-  background-color: #001440; }
+  background-color: #001440;
+  background-image: url("../img/bg/bg-testimonials.jpg");
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
   @media (min-width: 1200px) {
     .testimonials-carousel {
       padding: 4.875em 0; } }
@@ -3406,53 +3411,48 @@ footer {
       margin-left: -52px; }
   .testimonials-carousel .dark-carousel {
     padding: 2.5em 0; }
-    .testimonials-carousel .dark-carousel .slick-slide {
-      opacity: 0;
-      transition: all 0.3s; }
-      .testimonials-carousel .dark-carousel .slick-slide.slick-active {
-        opacity: 0.5; }
-      .testimonials-carousel .dark-carousel .slick-slide.slick-center {
-        opacity: 1; }
-        .testimonials-carousel .dark-carousel .slick-slide.slick-center .carousel-item .inner-wrapper figure span.photo {
-          width: 9.0625em;
-          height: 9.0625em; }
-      .testimonials-carousel .dark-carousel .slick-slide .carousel-item .inner-wrapper figure {
-        width: 16.25em;
-        display: inline-block;
-        padding-bottom: 1.25em; }
-        .testimonials-carousel .dark-carousel .slick-slide .carousel-item .inner-wrapper figure span.photo {
-          width: 7.1875em;
-          height: 7.1875em; }
     .testimonials-carousel .dark-carousel .carousel-item {
       position: relative;
       padding: 0 0.625em; }
       .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper {
         color: #ffffff;
-        text-align: center; }
-        .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper figure {
-          text-align: center;
-          position: relative; }
-          .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper figure span {
-            display: inline-block; }
-            .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper figure span.quote-left {
-              position: absolute;
-              top: 0;
-              left: 0; }
-            .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper figure span.photo {
-              border: 0.125em solid #ffffff;
-              border-radius: 100%; }
-            .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper figure span.quote-right {
-              position: absolute;
-              bottom: 0;
-              right: 0; }
+        text-align: center;
+        position: relative; }
+        .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper .quote-left {
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 1; }
+          @media (max-width: 767px) {
+            .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper .quote-left {
+              width: 1.5625em;
+              height: auto; } }
+        .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper .quote-right {
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          z-index: 1; }
+          @media (max-width: 767px) {
+            .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper .quote-right {
+              width: 1.5625em;
+              height: auto; } }
         .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper h3, .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper h4 {
+          position: relative;
+          z-index: 1;
           font-family: "Gotham Bold";
           color: #D4D743; }
         .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper h4 {
-          font-size: 0.625em; }
+          position: relative;
+          z-index: 1;
+          font-size: 1.25em; }
         .testimonials-carousel .dark-carousel .carousel-item .inner-wrapper p {
+          display: inline-block;
+          max-width: 33.75em;
+          width: 75%;
+          position: relative;
+          z-index: 1;
           font-family: "Gotham-Book-Font";
-          font-size: 0.75em;
+          font-size: 1.75em;
           padding: 0 0.625em; }
     .testimonials-carousel .dark-carousel .slick-dots {
       bottom: -45px; }
