--- a/wp-content/themes/laureus-theme/css/styles.css
+++ b/wp-content/themes/laureus-theme/css/styles.css
@@ -2813,7 +2813,7 @@ footer {
 
 .single-team .team-single,
 .single-ambassadors .team-single {
-  padding: 2.5em 0; }
+  padding: 2.5em 0.9375em; }
   @media (min-width: 1200px) {
     .single-team .team-single .team-item,
     .single-ambassadors .team-single .team-item {
@@ -3063,46 +3063,51 @@ footer {
 
 .team-loop-wrapper {
   padding: 2.5em 0; }
-  @media (min-width: 1200px) {
-    .team-loop-wrapper .team-item {
-      margin-bottom: 4em; } }
-  .team-loop-wrapper .team-item .thumb {
-    display: block;
-    position: relative;
-    padding-bottom: 1.625em; }
+  .team-loop-wrapper .team-item {
+    margin-bottom: 2.125em; }
     @media (min-width: 1200px) {
-      .team-loop-wrapper .team-item .thumb {
-        display: inline-block;
-        vertical-align: top; } }
-    .team-loop-wrapper .team-item .thumb img {
-      max-width: 100%; }
-    .team-loop-wrapper .team-item .thumb::after {
-      content: "";
+      .team-loop-wrapper .team-item {
+        margin-bottom: 4em; } }
+    .team-loop-wrapper .team-item .thumb {
       display: block;
-      width: 104px;
-      height: 6px;
-      background-color: #00CDCD;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      margin-left: 0; }
-  .team-loop-wrapper .team-item .content-wrapper {
-    display: block; }
-    @media (min-width: 1200px) {
-      .team-loop-wrapper .team-item .content-wrapper {
-        display: inline-block;
-        vertical-align: top;
-        padding: 0 1.25em;
-        width: 73%; } }
-    .team-loop-wrapper .team-item .content-wrapper h3 {
-      margin-top: 0; }
-      .team-loop-wrapper .team-item .content-wrapper h3 a {
-        font-size: 30px;
-        color: #001440;
-        font-family: "Gotham Bold"; }
-    .team-loop-wrapper .team-item .content-wrapper h4 {
-      font-size: 1.125em;
-      color: #001440; }
+      position: relative;
+      padding-bottom: 1.625em; }
+      @media (min-width: 1200px) {
+        .team-loop-wrapper .team-item .thumb {
+          display: inline-block;
+          vertical-align: top; } }
+      .team-loop-wrapper .team-item .thumb img {
+        max-width: 100%; }
+        @media (max-width: 767px) {
+          .team-loop-wrapper .team-item .thumb img {
+            width: 100%; } }
+      .team-loop-wrapper .team-item .thumb::after {
+        content: "";
+        display: block;
+        width: 104px;
+        height: 6px;
+        background-color: #00CDCD;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        margin-left: 0; }
+    .team-loop-wrapper .team-item .content-wrapper {
+      display: block; }
+      @media (min-width: 1200px) {
+        .team-loop-wrapper .team-item .content-wrapper {
+          display: inline-block;
+          vertical-align: top;
+          padding: 0 1.25em;
+          width: 73%; } }
+      .team-loop-wrapper .team-item .content-wrapper h3 {
+        margin-top: 0; }
+        .team-loop-wrapper .team-item .content-wrapper h3 a {
+          font-size: 30px;
+          color: #001440;
+          font-family: "Gotham Bold"; }
+      .team-loop-wrapper .team-item .content-wrapper h4 {
+        font-size: 1.125em;
+        color: #001440; }
 
 .news-tabs .nav-tabs {
   position: relative;
@@ -3260,6 +3265,9 @@ footer {
 
 .cream-wrapper-main {
   background-color: #F2F5D2; }
+  @media (max-width: 767px) {
+    .cream-wrapper-main h3 {
+      margin-left: 1.25em; } }
 
 .beneficiaries-carousel {
   padding: 1.75em 0; }
@@ -3267,7 +3275,7 @@ footer {
     .beneficiaries-carousel {
       padding: 4.875em 0; } }
   .beneficiaries-carousel h3 {
-    font-size: 30px;
+    font-size: 40px;
     display: block;
     color: #001440;
     line-height: 1;
@@ -3567,6 +3575,7 @@ footer {
           heigth: 15.625em; } }
 
 .patrons-inline {
+  border-top: 1px solid #666666;
   text-align: center; }
   .patrons-inline ul {
     text-align: center;
@@ -3603,11 +3612,16 @@ footer {
     .team-list .container h3 span {
       font-size: 30px;
       display: block; }
+  @media (max-width: 767px) {
+    .team-list .container .team-wrapper .slick-slide {
+      opacity: 0.4; }
+      .team-list .container .team-wrapper .slick-slide.slick-center {
+        opacity: 1; } }
   .team-list .container .team-wrapper .team-item {
     display: block;
     color: #F2F5D2;
     width: 90%;
-    margin: 2% auto 3%; }
+    margin: 2% 3%; }
     @media (min-width: 1200px) {
       .team-list .container .team-wrapper .team-item {
         display: inline-block;
@@ -3615,46 +3629,63 @@ footer {
         width: 18%;
         margin: 0 1% 2% 0; } }
     .team-list .container .team-wrapper .team-item img {
-      width: 100%;
+      width: 80%;
+      margin: 0 auto;
       height: auto; }
-    .team-list .container .team-wrapper .team-item .content-wrapper h4 a {
-      font-family: "Gotham Bold";
-      color: #F2F5D2; }
+      @media (min-width: 1200px) {
+        .team-list .container .team-wrapper .team-item img {
+          width: 100%; } }
+    .team-list .container .team-wrapper .team-item .content-wrapper {
+      text-align: center; }
+      @media (min-width: 1200px) {
+        .team-list .container .team-wrapper .team-item .content-wrapper {
+          text-align: left; } }
+      .team-list .container .team-wrapper .team-item .content-wrapper h4 a {
+        font-family: "Gotham Bold";
+        color: #F2F5D2; }
+        .team-list .container .team-wrapper .team-item .content-wrapper h4 a:hover {
+          color: #D4D743; }
     @media (min-width: 1200px) {
       .team-list .container .team-wrapper .team-item.item__5 {
         margin-right: 0; } }
-  .team-list .container .team-wrapper .read_more {
+  .team-list .container .read_more {
+    display: none;
     text-align: center;
     font-family: "Gotham Bold";
     margin: 4.25em auto 0; }
     @media (min-width: 1200px) {
-      .team-list .container .team-wrapper .read_more {
-        margin: 5.5em auto 0; } }
-    .team-list .container .team-wrapper .read_more i {
+      .team-list .container .read_more {
+        display: block;
+        margin: 2.375em auto 0; } }
+    .team-list .container .read_more i {
       display: block;
       margin: 1.25em auto;
       font-size: 1.25em; }
-    .team-list .container .team-wrapper .read_more a {
+    .team-list .container .read_more a {
       color: #001440;
       text-transform: uppercase; }
-  .team-list .container .team-wrapper .bottom-ctas {
+  .team-list .container .bottom-ctas {
     text-align: center; }
-    .team-list .container .team-wrapper .bottom-ctas ul {
-      display: inline-block;
+    .team-list .container .bottom-ctas ul {
+      display: block;
       padding: 0;
       max-width: 30.125em;
       margin: 0.625em;
       text-align: center; }
       @media (min-width: 1200px) {
-        .team-list .container .team-wrapper .bottom-ctas ul {
+        .team-list .container .bottom-ctas ul {
+          display: inline-block;
           margin: 0; } }
-      .team-list .container .team-wrapper .bottom-ctas ul li {
-        display: inline-block;
-        width: 40%; }
+      .team-list .container .bottom-ctas ul li {
+        display: block;
+        width: 100%;
+        margin: 0.625em auto; }
         @media (min-width: 1200px) {
-          .team-list .container .team-wrapper .bottom-ctas ul li {
+          .team-list .container .bottom-ctas ul li {
+            margin: 0;
+            display: inline-block;
             width: inherit; } }
-        .team-list .container .team-wrapper .bottom-ctas ul li a {
+        .team-list .container .bottom-ctas ul li a {
           display: block;
           padding: 1.25em;
           font-size: 0.625em;
@@ -3663,19 +3694,17 @@ footer {
           text-align: center;
           text-transform: uppercase; }
           @media (min-width: 1200px) {
-            .team-list .container .team-wrapper .bottom-ctas ul li a {
+            .team-list .container .bottom-ctas ul li a {
               padding: 0.8125em 1.0625em;
               font-size: 0.875em; } }
-          .team-list .container .team-wrapper .bottom-ctas ul li a:hover {
+          .team-list .container .bottom-ctas ul li a:hover {
             opacity: 0.5; }
-        .team-list .container .team-wrapper .bottom-ctas ul li:first-child a {
+        .team-list .container .bottom-ctas ul li:first-child a {
           background-color: #D4D743;
           color: #001440; }
-        .team-list .container .team-wrapper .bottom-ctas ul li:last-child {
-          margin-left: -6px; }
-          .team-list .container .team-wrapper .bottom-ctas ul li:last-child a {
-            background-color: #001440;
-            color: #ffffff; }
+        .team-list .container .bottom-ctas ul li:last-child a {
+          background-color: #001440;
+          color: #ffffff; }
 
 .follow-block {
   background-color: #001440;
@@ -3761,14 +3790,21 @@ footer {
       box-shadow: 0 0 0.625em #dfdfdf;
       text-align: left;
       padding: 0 2.5em 0.625em;
-      width: 21.4375em;
+      max-width: 21.4375em;
+      width: 80%;
       height: auto; }
       @media (min-width: 1200px) {
         .wrapper-related.block .item {
           padding: 0 2.5em 0.625em;
           margin: 0 2.5em;
+          max-width: 27.6875em;
           width: 27.6875em;
           height: 27.6875em; } }
+      @media (min-width: 768px) and (max-width: 1200px) {
+        .wrapper-related.block .item {
+          margin: 0 1.25em;
+          max-width: 18.75em;
+          height: 22.875em; } }
       .wrapper-related.block .item figure {
         margin: 1.0625em 0;
         text-align: left; }
@@ -3785,12 +3821,11 @@ footer {
         padding-bottom: 20px;
         margin-bottom: 30px;
         position: relative;
-        text-align: center;
         color: #001440;
+        text-align: left;
         translate: all 0.3s; }
         @media (min-width: 1200px) {
           .wrapper-related.block .item h3 {
-            text-align: left;
             font-size: 45px; } }
         .wrapper-related.block .item h3::after {
           content: "";
@@ -3807,8 +3842,11 @@ footer {
           .wrapper-related.block .item h3 a:hover {
             color: #D4D743; }
       .wrapper-related.block .item p {
-        font-size: 1.25em;
+        font-size: 1.125em;
         color: #666666; }
+        @media (min-width: 1200px) {
+          .wrapper-related.block .item p {
+            font-size: 1.25em; } }
   .wrapper-related.inline {
     padding-top: 3.75em;
     padding-bottom: 3.75em;
@@ -3896,7 +3934,7 @@ footer {
     margin-bottom: 30px;
     position: relative;
     text-align: left;
-    font-size: 60px; }
+    font-size: 40px; }
     @media (min-width: 1200px) {
       .hero-title-wrapper header h1 {
         position: absolute;
@@ -3923,12 +3961,8 @@ footer {
       background-color: #00CDCD;
       position: absolute;
       bottom: 0;
-      left: 50%;
-      margin-left: -52px; }
-      @media (min-width: 1200px) {
-        .hero-title-wrapper header h1::after {
-          left: 0;
-          margin-left: 0; } }
+      left: 0;
+      margin-left: 0; }
 
 .hero-home-block {
   position: relative;
@@ -4457,10 +4491,9 @@ footer {
         padding-bottom: 20px;
         margin-bottom: 30px;
         position: relative;
-        text-align: center; }
+        text-align: left; }
         @media (min-width: 1200px) {
           .work-cities .side-city.text-wrapper h3 {
-            text-align: left;
             font-size: 35px; } }
         .work-cities .side-city.text-wrapper h3::after {
           content: "";
@@ -4481,7 +4514,11 @@ footer {
         font-family: "Gotham Bold";
         font-size: 0.875em;
         text-align: center;
-        padding: 0.9375em 1.5625em; }
+        padding: 0.9375em 1.5625em;
+        margin: 0.625em; }
+        @media (min-width: 1200px) {
+          .work-cities .side-city.text-wrapper a {
+            margin: 0; } }
         .work-cities .side-city.text-wrapper a:hover {
           color: #ffffff;
           background-color: #00CDCD; }
@@ -4529,10 +4566,9 @@ footer {
         padding-bottom: 20px;
         margin-bottom: 30px;
         position: relative;
-        text-align: center; }
+        text-align: left; }
         @media (min-width: 1200px) {
           .work-good .side-good.text-wrapper h3 {
-            text-align: left;
             font-size: 35px; } }
         .work-good .side-good.text-wrapper h3::after {
           content: "";
