--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-team-list.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-team-list.scss
@@ -24,11 +24,21 @@
 			}
 		}
 		.team-wrapper {
+			
+			.slick-slide {
+				@include mobile {
+					opacity: 0.4;
+					&.slick-center {
+						opacity: 1;
+					}
+				}
+			}
+
 			.team-item {
 				display: block;
 				color: $cream;
 				width: 90%;
-				margin: 2% auto 3%;
+				margin: 2% 3%;
 				@include desktop {
 					display: inline-block;
 					vertical-align: top;
@@ -36,14 +46,25 @@
 					margin:0 1% 2% 0;
 				}
 				img {
-					width: 100%;
+					width: 80%;
+					margin: 0 auto;
 					height: auto;
+					@include desktop {
+						width: 100%;
+					}
 				}
 				.content-wrapper {
+					text-align: center;
+					@include desktop {
+						text-align: left;
+					}
 					h4 {
 						a {
 							font-family: $bold;
 							color: $cream;
+							&:hover {
+								color: $crygr;
+							}
 						}
 					}
 				}
@@ -53,69 +74,73 @@
 					}
 				}
 			}
-
-			.read_more {
-				text-align: center;
-				font-family: $bold;
-				margin: em(68) auto 0;
-				@include desktop {
-					margin: em(88) auto 0;
-				}
-				i{
-					display: block;
-					margin: em(20) auto;
-					font-size: em(20);
-				}
-				a {
-					color: $dblue;
-					text-transform: uppercase;
-				}
+		}
+		.read_more {
+			display: none;
+			text-align: center;
+			font-family: $bold;
+			margin: em(68) auto 0;
+			@include desktop {
+				display: block;
+				margin: em(38) auto 0;
 			}
-			.bottom-ctas {
+			i{
+				display: block;
+				margin: em(20) auto;
+				font-size: em(20);
+			}
+			a {
+				color: $dblue;
+				text-transform: uppercase;
+			}
+		}
+		.bottom-ctas {
+			text-align: center;
+			ul{
+				display: block;
+				padding: 0;
+				max-width: em(482); 
+				margin: em(10);
 				text-align: center;
-				ul{
+				@include desktop {
 					display: inline-block;
-					padding: 0;
-					max-width: em(482); 
-					margin: em(10);
-					text-align: center;
+					margin: 0;
+				}
+				li {
+					display: block;
+					width: 100%;
+					margin: em(10) auto;
 					@include desktop {
 						margin: 0;
-					}
-					li {
 						display: inline-block;
-						width: 40%;
+						width: inherit;
+					}
+					a { 
+						display: block;
+						padding: em(20);
+						font-size: em(10);
+						padding: em(16) em(5);
+						font-family: $bold;
+						text-align: center;
+						text-transform: uppercase;
 						@include desktop {
-							width: inherit;
+							padding: em(13) em(17);
+							font-size: em(14);
 						}
-						a { 
-							display: block;
-							padding: em(20);
-							font-size: em(10);
-							padding: em(16) em(5);
-							font-family: $bold;
-							text-align: center;
-							text-transform: uppercase;
-							@include desktop {
-								padding: em(13) em(17);
-								font-size: em(14);
-							}
-							&:hover {
-								opacity: 0.5;
-							}
+						&:hover {
+							opacity: 0.5;
 						}
-						&:first-child {
-							a {
-								background-color: $crygr;
-								color: $dblue;
-							}
+					}
+					&:first-child {
+						a {
+							background-color: $crygr;
+							color: $dblue;
 						}
-						&:last-child {
-							margin-left: -6px;
-							a {
-								background-color: $dblue;
-								color: $white;
-							}
+					}
+					&:last-child {
+						a {
+							background-color: $dblue;
+							color: $white;
 						}
 					}
 				}
